# robot_learning_from_BP

./: .gitignore  README.md  __init__.py  plot_res.py  plot_wrench_res.py  pyproject.toml  requirements.txt
CleanData/: peno_diagonalline_30cm_iter1.csv  peno_diagonalline_30cm_iter2.csv  peno_diagonalline_30cm_iter3.csv  peno_diagonalline_30cm_iter5.csv  peno_diagonalline_40cm_iter1.csv  peno_diagonalline_40cm_iter2.csv  peno_diagonalline_40cm_iter3.csv  peno_diagonalline_40cm_iter4.csv  peno_diagonalline_40cm_iter5.csv  peno_diagonalline_50cm_iter1.csv  peno_diagonalline_50cm_iter2.csv  peno_diagonalline_50cm_iter3.csv  peno_diagonalline_50cm_iter4.csv  peno_diagonalline_50cm_iter5.csv  peno_line_30cm_iter1.csv  peno_line_30cm_iter2.csv  peno_line_30cm_iter3.csv  peno_line_30cm_iter4.csv  peno_line_30cm_iter5.csv  peno_line_40cm_iter1.csv  peno_line_40cm_iter2.csv  peno_line_40cm_iter3.csv  peno_line_40cm_iter4.csv  peno_line_40cm_iter5.csv  peno_line_50cm_iter1.csv  peno_line_50cm_iter2.csv  peno_line_50cm_iter3.csv  peno_line_50cm_iter4.csv  peno_line_50cm_iter5.csv
Osciliilator/: main.py
Oscillator/: main.py
crocoddylModeling/: arm.py  arm_dynamics.py
data/: predicted_pose_twist_wrench_crck.npy  predicted_pose_twist_wrench_peno.npy  predicted_pose_twist_wrench_pvc.npy
experimental_data/: Fd_from_human_X_exp1.txt  Fd_from_robot_X_exp1.txt  Fd_gmr_cork_good_res_1.txt  Fd_gmr_cork_good_res_2.txt  Fd_gmr_cork_good_res_3.txt  Fd_gmr_peno_good_res_1.txt  Fd_robot_cork_good_res_1.txt  Fd_robot_peno_good_res_1.txt  Force10N_optimized_stiffness_08_05_24_iter1.txt  (+20 more)
(+279 files in other folders)
